added homepage to package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://ewbandera.github.io/formik/",
   "dependencies": {
     "formik": "^2.2.5",
     "react": "^17.0.1",
